--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,26 @@
+name = "DSAPOMDPs"
+uuid = "7634b283-9cc5-4b0c-bd6c-ef66a25bf403"
+authors = ["Mansur Arief", "Nur Ahmad Khatim", "Azmul Irfan", "Amaliya Matau'l"]
+version = "1.0.0-DEV"
+
 [deps]
+ARDESPOT = "d96c9ae4-3372-47d5-8a88-316ae77be8cf"
+BasicPOMCP = "d721219e-3fc6-5570-a8ef-e5402f47c49e"
+D3Trees = "e3df1716-f71e-5df9-9e2d-98e193103c45"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+MCTS = "e12ccd36-dcad-5f33-8774-9175229e7b33"
 POMDPModelTools = "08074719-1b2a-587c-a292-00f91cc44415"
+POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
-Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
-PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
-QuickPOMDPs = "8af83fb2-a731-493c-9049-9e19dbce6165"
+PointBasedValueIteration = "835c131e-675f-4498-8e2c-c054c75556e1"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
